istio/Prometheus_Grafana_gateway.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: grafana-gateway
  namespace: default
spec:
  selector:
    istio: ingressgateway # use istio default controller
  servers:
    - port:
        number: 8888
        name: http
        protocol: HTTP
      hosts:
        - "*"
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: vs-grafana
  namespace: default
spec:
  hosts:
    - "*"
  gateways:
    - grafana-gateway
  http:
    - route:
        - destination:
            host: prometheus-grafana
            port:
              number: 80
---
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: prometheus-gateway
  namespace: default
spec:
  selector:
    istio: ingressgateway # use istio default controller
  servers:
    - port:
        number: 9090
        name: http
        protocol: HTTP
      hosts:
        - "*"
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: prometheus-vs
  namespace: default
spec:
  hosts:
    - "*"
  gateways:
    - prometheus-gateway
  http:
    - route:
        - destination:
            host: prometheus-prometheus-oper-prometheus
            port:
              number: 80
