istio/hipstershop_gateway.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: http-gateway
  namespace: hipster-shop
spec:
  selector:
    istio: ingressgateway # use istio default controller
  servers:
    - port:
        number: 80
        name: http
        protocol: HTTP
      hosts:
        - "*"
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: frontend
  namespace: hipster-shop
spec:
  hosts:
    - "*"
  gateways:
    - http-gateway
  http:
    - route:
        - destination:
            host: frontend
            port:
              number: 80
